--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,2 @@
 //Colores
-$colors:(primero:#A6E1FA, segundo:#48BF84, tercero:#FDF6ED, cuarto:#E4572E);
+$colors:(primero:#2091f9, segundo:#001a49, tercero:#FDF6ED, cuarto:#E4572E);
