--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,3 @@
 //Colores
-$colors:(primero:#2091f9, segundo:#001a49, tercero:#FDF6ED, cuarto:#E4572E);
+$colors:(primero:#2091f9, segundo:#001a49, tercero:#FDF6ED, cuarto:#FF7143);
+$colorCard:(plan:#696871, precio: #1d293f, bgbtn: #fff, btn:#5454d4);
