--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -190,3 +190,76 @@ body {
         }
     }
 }
+
+// Seccion Promociones
+.promos {
+    text-align: center;
+
+    .promos__tabla {
+        padding-top: 60px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2.5em;
+        justify-content: space-evenly;
+        align-items: center;
+
+        .promos__elemento {
+            background-color: #e5e5f7;
+            text-align: center;
+            border-radius: 10px;
+            width: 330px;
+            padding: 40px;
+
+            .promos__name {
+                color: map-get($colorCard, plan);
+                margin-bottom: 15px;
+                font-weight: bold;
+                font-size: 1.5rem;
+            }
+
+            .promos__precio {
+                font-size: 2.5rem;
+                color: map-get($colorCard, precio);
+            }
+
+            .promos__caract {
+                margin-top: 35px;
+                display: grid;
+                font-weight: 400;
+                font-size: 1.2rem;
+                margin-bottom: 50px;
+                color: map-get($colorCard, plan);
+            }
+
+            .promos__btn {
+                display: block;
+                padding: 20px 0;
+                border-radius: 10px;
+                text-decoration: none;
+                background-color: map-get($colorCard, bgbtn);
+                font-weight: 600;
+                box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+            }
+        }
+
+        .promos__elemento--best {
+            width: 370px;
+            padding: 60px 40px;
+            background-color: map-get($colors, cuarto);
+
+            .promos__name{
+                color:#fff;
+            }
+            .promos__precio{
+                color: #fff;
+            }
+            .promos__item{
+                color: #fff;
+            }
+            .promos__btn{
+                background-color: #9f3919;
+                color: #fff;
+            }
+        }
+    }
+}
