--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,41 @@ body {
         width: 150px;
         height: 150px; }
 
-.preguntas .subtitulo {
-  color: #001a49;
-  font-size: 2rem;
-  margin-bottom: 25px; }
+.preguntas {
+  text-align: center; }
+  .preguntas .subtitulo {
+    color: #001a49;
+    font-size: 2rem;
+    margin-bottom: 25px; }
+  .preguntas .preguntas__container {
+    display: grid;
+    gap: 2em;
+    padding-top: 50px;
+    padding-bottom: 100px; }
+    .preguntas .preguntas__container .preguntas__body {
+      border: 1px solid #5454d4;
+      border-radius: 6px; }
+      .preguntas .preguntas__container .preguntas__body .preguntas__respuesta {
+        padding: 0 30px 0; }
+        .preguntas .preguntas__container .preguntas__body .preguntas__respuesta .preguntas__titulo {
+          display: flex;
+          font-size: 20px;
+          padding: 30px 0 30px;
+          cursor: pointer;
+          color: #001a49;
+          justify-content: space-between; }
+          .preguntas .preguntas__container .preguntas__body .preguntas__respuesta .preguntas__titulo .preguntas__flecha {
+            border-radius: 50%;
+            background-color: #001a49;
+            width: 25px;
+            height: 25px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-self: flex-end;
+            margin-left: 10px; }
+        .preguntas .preguntas__container .preguntas__body .preguntas__respuesta .preguntas__resp {
+          text-align: left;
+          margin-bottom: 20px; }
+  .preguntas .preguntas__nuevas .preguntas__texto {
+    margin-bottom: 15px; }
