--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -194,6 +194,7 @@ body {
 // Seccion Promociones
 .promos {
     text-align: center;
+
     .subtitulo {
         color: map-get($colors, segundo);
         font-size: 2rem;
@@ -278,6 +279,7 @@ body {
 
     .companias__container {
         margin: 0 auto;
+
         .companias__body {
             display: grid;
             grid-template-columns: 1fr max-content;
@@ -289,32 +291,88 @@ body {
 
             .companias__texto {
                 max-width: 700px;
+
                 .subtitulo {
                     color: map-get($colors, segundo);
                     font-size: 2rem;
                     margin-bottom: 25px;
                 }
-                .companias__info{
+
+                .companias__info {
                     background-color: royalblue;
                     color: #FFF;
                     display: inline-block;
                     padding: 5px;
                 }
             }
+
             .companias__img {
                 width: 150px;
                 height: 150px;
             }
         }
-        
+
     }
 }
 
 // Seccion Preguntas
-.preguntas{
+.preguntas {
+    text-align: center;
+
     .subtitulo {
         color: map-get($colors, segundo);
         font-size: 2rem;
         margin-bottom: 25px;
     }
+
+    .preguntas__container {
+        display: grid;
+        gap: 2em;
+        padding-top: 50px;
+        padding-bottom: 100px;
+
+        .preguntas__body {
+            border: 1px solid #5454d4;
+            border-radius: 6px;
+
+            .preguntas__respuesta {
+                padding: 0 30px 0;
+
+
+                .preguntas__titulo {
+                    display: flex;
+                    font-size: 20px;
+                    padding: 30px 0 30px;
+                    cursor: pointer;
+                    color: map-get($colors, segundo);
+                    justify-content: space-between;
+
+
+                    .preguntas__flecha {
+                        border-radius: 50%;
+                        background-color: map-get($colors, segundo);
+                        width: 25px;
+                        height: 25px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        align-self: flex-end;
+                        margin-left: 10px;
+                    }
+                }
+
+                .preguntas__resp {
+                    text-align: left;
+                    margin-bottom: 20px;
+                }
+            }
+        }
+
+    }
+    .preguntas__nuevas{
+        .preguntas__texto{
+            margin-bottom: 15px;
+        }
+    }
+
 }
