--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -83,7 +83,6 @@ body {
             }
         }
     }
-
     .hero__container {
         max-width: 800px;
         padding: 0;
@@ -104,6 +103,54 @@ body {
         }
     }
 }
+.modal__container{
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .modal{
+        width: 40%;
+        height: 50%;
+        border-radius: 10px;
+        background: #FFF;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        position: relative;
+        transition: transform 1s;
+        transform: translateY(0);
+
+        .modal__img{
+            height: 30%;
+        }
+        .close{
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            cursor: pointer;
+            display: inline-block;
+            width: 25px;
+            height: 25px;
+            background: #9f3919;
+            color: #FFF;
+            line-height: 25px;
+            border-radius: 50%;
+        }
+    }
+    .modal-close{
+        transform: translateY(-200%);
+    }
+}
 #compras__btn{
     font-size: 1em;
     display: inline-block;
@@ -113,6 +160,8 @@ body {
     text-decoration: none;
     padding: 3px 8px 1px 8px ;
     border-radius: 20px;
+    cursor: pointer;
+    
 }
 .btn{
     font-size: 1em;
